--- a/lib/wtf_web/templates/search/search.html.leex
+++ b/lib/wtf_web/templates/search/search.html.leex
@@ -1,5 +1,5 @@
 <form phx-change="handle_search">
-  <input name="query" autocomplete="off" value="<%= @query %>" phx-debounce="3000"/>
+  <input name="query" autocomplete="off" value="<%= @query %>" phx-debounce=3000/>
 </form>
 
 <h2><%= @query %></h2>
